# index-backtesting

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/clients/: data_loader.py
app/models/: backtest.py  data_field.py  filters.py
app/routes/: backtest.py  dependencies.py
app/services/: backtest.py
app/utils/: check_rule.py  generate_data.py
data/: data_generator.py
